20070614
========

- Fixed Makefile for Mac OS X.
- Included missing "=.1" to dist target.
- Fixed uninstall target.


20070613
========

- Added support for 1e3, 3e-6 style numbers.


20070610
========

- Changed output format for numbers <0 so that it they are displayed as
  follows:

  1/10    = 0.1
  1/100   = 10m
  1/1000  = 1m
  1/10000 = 0.1m

- Allow use of () brackets as well as [], directly equivalent to each other.

- Fixed operator precedence: (), ^, */, +_. Negation of single number is still
  considered first.
 
- Added support for the "," as a decimal point - this is handled by strtod()
  so it is locale dependent whether "." or "," is accepted as valid.

- Added man pages.