@@ -1,4 +1,4 @@
-.TH "ralcalc" "1" "13th June 2007" "" ""
+.TH "ralcalc" "1" "16th June 2007" "" ""
 .SH NAME
 ralcalc \- a simple command line calculator
 
@@ -156,13 +156,6 @@ Internal error: If an unknown error code is passed to the error output function,
 .I At least one error occurred.
 
 .SH BUGS
-Brackets aren't matched correctly, so the following is treated as valid:
-.PP
-.RS
-= 2]+[3
-.RE
-This particular example causes an infinite loop.
-.PP
 Negation of a number is given the highest precedent:
 .PP
 .RS
